# lomiri-player

./: .gitlab-ci.yml  CMakeLists.txt  README.md  apparmor.json  clickable.yaml  lomiri-music-app.desktop.in.in  manifest.json.in  music-app.qmltheme
.clickable/amd64/: Dockerfile  image.json
app/: CMakeLists.txt  music-app.qml
app/components/: BlurredBackground.qml  BlurredHeader.qml  CMakeLists.txt  CoverGrid.qml  ListItemReorderComponent.qml  LoadingSpinnerComponent.qml  MusicPage.qml  MusicToolbar.qml  NowPlayingFullView.qml  NowPlayingSidebar.qml  NowPlayingToolbar.qml  Player.qml  PlaylistsEmptyState.qml  Queue.qml  Style.qml  WorkerWaiter.qml
app/components/Delegates/: ActionDelegate.qml  CMakeLists.txt  Card.qml  MusicListItem.qml
app/components/Dialog/: CMakeLists.txt  ContentHubErrorDialog.qml  ContentHubNotFoundDialog.qml  ContentHubWaitDialog.qml  EditPlaylistDialog.qml  NewPlaylistDialog.qml  RemovePlaylistDialog.qml
app/components/Flickables/: CMakeLists.txt  MultiSelectListView.qml  MusicGridView.qml  MusicListView.qml
app/components/HeadState/: CMakeLists.txt  EmptyHeadState.qml  MultiSelectHeadState.qml  PlaylistHeadState.qml  PlaylistsHeadState.qml  QueueHeadState.qml  SearchHeadState.qml  SearchableHeadState.qml
app/components/Helpers/: CMakeLists.txt  ContentHubHelper.qml  UriHandlerHelper.qml  UserMetricsHelper.qml
app/components/ListItemActions/: AddToPlaylist.qml  AddToQueue.qml  AddToQueueAndPlaylist.qml  CMakeLists.txt  Remove.qml
app/components/Themes/Ambiance/: SliderStyle.qml
app/components/ViewButton/: CMakeLists.txt  PlayAllButton.qml  QueueAllButton.qml  ShuffleButton.qml
app/components/Walkthrough/: CMakeLists.txt  FirstRunWalkthrough.qml  Slide1.qml  Slide2.qml  Slide3.qml  Walkthrough.qml
app/graphics/: CMakeLists.txt
app/logic/: CMakeLists.txt  meta-database.js  playlists.js
app/ui/: AddToPlaylist.qml  Albums.qml  ArtistView.qml  Artists.qml  CMakeLists.txt  ContentHubExport.qml  Genres.qml  LibraryEmptyState.qml  NowPlaying.qml  Playlists.qml  Recent.qml  SettingsPage.qml  Songs.qml  SongsView.qml
debian/: changelog  control  lomiri-music-app-autopilot.install  rules
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  am.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  fr_CH.po  frp.po  fur.po  ga.po  (+71 more)
tests/autopilot/: CMakeLists.txt
tests/autopilot/lomiri_music_app/: CMakeLists.txt  __init__.py
tests/autopilot/lomiri_music_app/tests/: CMakeLists.txt  __init__.py  test_music.py
tests/manual/2015.music.ubports:music-tests/: manage.py
